# containerregistry

./: .gitignore  .travis.yml  BUILD.bazel  README.md  WORKSPACE  __init__.py  appender.yaml  appender_test.sh  def.bzl  digest.yaml  digest_test.sh  digester.yaml  digester_test.sh  flatten.yaml  importer.yaml  puller.yaml  puller_test.sh  pusher.yaml  pusher_test.sh  requirements.txt  testenv.sh
client/: __init__.py  docker_creds_.py  docker_name_.py  monitor_.py
client/v1/: __init__.py  docker_creds_.py  docker_http_.py  docker_image_.py  docker_session_.py  save_.py
client/v2/: __init__.py  append_.py  docker_digest_.py  docker_http_.py  docker_image_.py  docker_session_.py  util_.py  v1_compat_.py
client/v2_2/: __init__.py  append_.py  docker_creds_.py  docker_digest_.py  docker_http_.py  docker_image_.py  docker_image_list_.py  docker_session_.py  oci_compat_.py  save_.py  util_.py  v2_compat_.py
tools/: __init__.py  docker_appender_.py  docker_puller_.py  docker_pusher_.py  fast_flatten_.py  fast_importer_.py  fast_puller_.py  fast_pusher_.py  image_digester_.py  logging_setup_.py
transform/v1/: metadata_.py
transform/v2_2/: metadata_.py
transport/: __init__.py  retry_.py  retry_transport_.py  transport_pool_.py
