# Copyright 2017 Google Inc. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
package(default_visibility=["//visibility:public"])

py_library(
   name = "containerregistry",
   srcs = glob(["**/*.py"]),
   deps = [
     "@httplib2//:httplib2",
     "@oauth2client//:oauth2client",
     "@concurrent//:concurrent",
   ]
)

load("@subpar//:subpar.bzl", "par_binary")

par_binary(
   name = "puller",
   srcs = ["tools/fast_puller_.py"],
   main = "tools/fast_puller_.py",
   visibility = ["//visibility:public"],
   deps = [":containerregistry"]
)

par_binary(
   name = "pusher",
   srcs = ["tools/fast_pusher_.py"],
   main = "tools/fast_pusher_.py",
   visibility = ["//visibility:public"],
   deps = [":containerregistry"]
)

sh_test(
    name = "puller_test",
    size = "large",
    srcs = ["puller_test.sh"],
    data = [
      ":puller.par",
      "testenv.sh",
    ],
)

sh_test(
    name = "pusher_test",
    size = "large",
    srcs = ["pusher_test.sh"],
    data = [
      ":pusher.par",
      "testenv.sh",
    ],
)
